--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
 
         <!-- Main -->
-        <script src="./dist/main.js"></script>
+        <script src="./dist/app.js"></script>
     </body>
 </html>
